updated create event button

--- a/static-ui/sample-homepage.html
+++ b/static-ui/sample-homepage.html
@@ -17,6 +17,7 @@
 		<!-- Font Awesome Link -->
 
 		<script src="https://use.fontawesome.com/46c6e23a21.js"></script>
+		<link rel="stylesheet" href="font-awesome-animation.min.css">
 
 		<!-- CrowdVibe CSS -->
 
@@ -111,7 +112,7 @@
 					</div>
 					<div class="col-md-6 mb-4">
 						<div>
-							<a href="#" class="sticky-top"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event
+							<button type="button" class="btn btn-outline-primary w-100 mb-2"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event</button><a href="#" class="sticky-top">
 							</a>
 						</div>
 						<div class="card event">
@@ -172,7 +173,7 @@
 						</div>
 						<div class="card mt-4 p-0">
 						<div class="card-header">
-							<i class="fa fa-fire" aria-hidden="true"></i>What's Vibing
+							<i class="fa fa-wifi faa-pulse animated" aria-hidden="true"></i> What's Vibing
 						</div>
 							<div class="card-footer">
 								<a href="#">1. Chris' Block Party</a>
