--- a/static-ui/sample-homepage.html
+++ b/static-ui/sample-homepage.html
@@ -60,19 +60,25 @@
 						  aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
 					<span class="navbar-toggler-icon"></span>
 				</button>
-				<div class="collapse navbar-collapse" id="navbarSupportedContent">
-					<ul class="navbar-nav mr-auto">
-						<li class="nav-item active">
-							<a class="nav-link" href="#">Create An Event</a>
-						</li>
-						<li class="nav-item">
-							<a class="nav-link" href="#">Sign-out</a>
-						</li>
-					</ul>
+				<div class="collapse navbar-collapse ml-auto" id="navbarSupportedContent">
 					<form class="form-inline my-2 my-lg-0">
 						<input class="form-control mr-sm-2" type="search" placeholder="Search" aria-label="Search">
 						<button class="btn btn-outline-success my-2 my-sm-0" type="submit">Search</button>
 					</form>
+					<ul class="navbar-nav ml-auto">
+						<li class="nav-item dropdown">
+							<a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button"
+								data-toggle="dropdown" aria-haspopup="true" aria-expanded="false"> <img
+								class="rounded-circle m-0"
+								src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="50" width="50">
+							</a>
+							<div class="dropdown-menu mr-auto" aria-labelledby="navbarDropdown">
+								<a class="dropdown-item mr-auto" href="#">Profile</a>
+								<a class="dropdown-item mr-auto" href="#">Create An Event</a>
+								<a class="dropdown-item mr-auto" href="#">Signout</a>
+							</div>
+						</li>
+					</ul>
 				</div>
 			</nav>
 		</header>
@@ -82,37 +88,44 @@
 					<div class="col-md-4 align-content-center">
 						<div class="card">
 							<div class="card-header">
-							Your Profile
+								Your Profile
 							</div>
-						<img class="card-img-top"
-							  src="https://dl.dropboxusercontent.com/s/njpvy4k20010bkt/background.jpg?dl=0" height=200
-							  alt="Card image cap">
-						<div class="card-body text-center">
-							<img class="rounded-circle m-0"
-								  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="100"
-								  width="100">
-							<h4 class="card-title my-0">Zach Spangler</h4>
-							<p class="card-text mb-1"><p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
-							<p class="card-text mb-1 text-muted">zspang</p>
-							<p class="card-text my-0">zaspangler@gmail.com</p>
-							<p class="card-text my-1">I love to play sports specifically lightsaber dueling and drink
-								beer.</p>
+							<img class="card-img-top"
+								  src="https://dl.dropboxusercontent.com/s/njpvy4k20010bkt/background.jpg?dl=0" height=200
+								  alt="Card image cap">
+							<div class="card-body text-center">
+								<img class="rounded-circle m-0"
+									  src="https://dl.dropboxusercontent.com/s/s05h8qapt3p00kn/face.jpg?dl=0" height="100"
+									  width="100">
+								<h4 class="card-title my-0">Zach Spangler</h4>
+								<p class="card-text mb-1">
+								<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
+								<p class="card-text mb-1 text-muted">zspang</p>
+								<p class="card-text my-0">zaspangler@gmail.com</p>
+								<p class="card-text my-1">I love to play sports specifically lightsaber dueling and drink
+									beer.</p>
+							</div>
+							<div class="card-footer">
+								<a href="#">
+									<small class="text-muted"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Profile
+									</small>
+								</a>
+							</div>
+							<div class="card-footer">
+								<a href="#">
+									<small class="text-muted"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event
+									</small>
+								</a>
+							</div>
 						</div>
-						<div class="card-footer">
-							<a href="#">
-								<small class="text-muted"><i class="fa fa-pencil" aria-hidden="true"></i> Edit Profile</small>
-							</a>
-						</div>
-						<div class="card-footer">
-							<a href="#">
-								<small class="text-muted"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event</small>
-							</a>
-						</div>
-					</div>
 					</div>
 					<div class="col-md-6 mb-4">
 						<div>
-							<button type="button" class="btn btn-outline-primary w-100 mb-2"><i class="fa fa-plus" aria-hidden="true"></i> Create An Event</button><a href="#" class="sticky-top">
+							<button type="button" class="btn btn-outline-primary w-100 mb-2"><i class="fa fa-plus"
+																													  aria-hidden="true"></i> Create
+								An Event
+							</button>
+							<a href="#" class="sticky-top">
 							</a>
 						</div>
 						<div class="card event">
@@ -125,7 +138,8 @@
 								<p class="card-text">
 									<small class="text-muted">Hosted By: Zach</small>
 								</p>
-								<p class="card-text mb-1"><p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
+								<p class="card-text mb-1">
+								<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
 								<h4 class="card-title">Happy Hour</h4>
 								<p class="card-text">Some co-workers are getting together for a drink, we would love to meet
 									some new people in town.</p>
@@ -158,83 +172,93 @@
 					<div class="col-md-2">
 						<div class="card">
 							<div class="card-header">
-								Sponsored
+								<i class="fa fa-wifi faa-pulse animated" aria-hidden="true"></i> What's Vibing
 							</div>
 							<img class="card-img-top"
 								  src="https://dl.dropboxusercontent.com/s/pz45ev8qmmzuome/alex-holyoake-202959.jpg?dl=0"
 								  alt="Card image cap">
 							<div class="card-body">
-								<h4 class="card-title">Sparks NightClub</h4>
-								<p class="card-text">Come on out for ladies night and pack the house for $1 drinks</p>
-								<p class="card-text">
-									<small class="text-muted">$1 Drinks Until 9</small>
-								</p>
+								<h4 class="card-title">Chris' Block Party</h4>
+								<p class="card-text">Come on out for a party on the entire block. We have a bondfire, drinks and
+									all other sorts of goodies.</p>
 							</div>
-						</div>
-						<div class="card mt-4 p-0">
-						<div class="card-header">
-							<i class="fa fa-wifi faa-pulse animated" aria-hidden="true"></i> What's Vibing
-						</div>
-							<div class="card-footer">
-								<a href="#">1. Chris' Block Party</a>
-						</div>
-							<div class="card-footer">
-								<a href="#">2. Shakespeare in the Park</a>
-							</div>
-						</div>
-						<div class="card-footer">
-							<a href="#">3. Coffee and Kitties</a>
-						</div>
-					</div>
-				</div>
-			<div class="row">
-				<div class="col-md-4"></div>
-				<div class="col-md-6">
-					<div class="card">
-						<img class="card-img-top"
-							  src="https://dl.dropboxusercontent.com/s/gmr99ec6dbau6uf/baseball.jpg?dl=0"
-							  alt="Card image cap">
-						<div class="card-body text-center">
-							<img class="rounded-circle"
-								  src="https://dl.dropboxusercontent.com/s/5ynm24sbmzavkjw/maria-face.jpg?dl=0"
-								  height="100"
-								  width="100">
-							<p class="card-text">
-								<small class="text-muted mb-0">Hosted By: Maria</small>
-							</p>
-							<p class="card-text m-0"><p class="fa fa-star" aria-hidden="true"><p class="fa fa-star" aria-hidden="true"><p class="fa fa-star" aria-hidden="true"><p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
-							<h4 class="card-title">Isotopes Baseball Game</h4>
-							<p class="card-text">Just moved to town from St. Louis, me and one of my close friends
-								are
-								heading to the Isotopes game tonight , would love to make some new friends.</p>
-							<p class="card-text my-1">
-								<small class="text-muted">Price:</small>
-								$15.00
-							</p>
-							<p class="card-text my-1">
-								<small class="text-muted">Attending:</small>
-								3
-							</p>
-							<p class="card-text my-1">
-								<small class="text-muted">Start Time:</small>
-								6:00pm
-							</p>
-							<p class="card-text my-1">
-								<small class="text-muted">End Time:</small>
-								10:00pm
-							</p>
-						</div>
-						<a href="#">
 							<div class="card-footer">
 								<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
-									Attend Event
+									Crowd Size: 76
 								</small>
 							</div>
-						</a>
+						</div>
+						<div class="card">
+							<div class="card-header">
+								<i class="fa fa-wifi faa-pulse animated" aria-hidden="true"></i> What's Vibing
+							</div>
+							<img class="card-img-top"
+								  src="https://dl.dropboxusercontent.com/s/pz45ev8qmmzuome/alex-holyoake-202959.jpg?dl=0"
+								  alt="Card image cap">
+							<div class="card-body">
+								<h4 class="card-title">Shakespeare in the Park</h4>
+								<p class="card-text">Drama, Drama, Drama! </p>
+							</div>
+							<div class="card-footer">
+								<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
+									Crowd Size: 56
+								</small>
+							</div>
+						</div>
 					</div>
 				</div>
-				<div class="col-md-2"></div>
-			</div>
+				<div class="row">
+					<div class="col-md-4"></div>
+					<div class="col-md-6">
+						<div class="card">
+							<img class="card-img-top"
+								  src="https://dl.dropboxusercontent.com/s/gmr99ec6dbau6uf/baseball.jpg?dl=0"
+								  alt="Card image cap">
+							<div class="card-body text-center">
+								<img class="rounded-circle"
+									  src="https://dl.dropboxusercontent.com/s/5ynm24sbmzavkjw/maria-face.jpg?dl=0"
+									  height="100"
+									  width="100">
+								<p class="card-text">
+									<small class="text-muted mb-0">Hosted By: Maria</small>
+								</p>
+								<p class="card-text m-0">
+								<p class="fa fa-star" aria-hidden="true">
+								<p class="fa fa-star" aria-hidden="true">
+								<p class="fa fa-star" aria-hidden="true">
+								<p class="fa fa-star" aria-hidden="true"><i class="fa fa-star-half" aria-hidden="true"></i></p>
+								<h4 class="card-title">Isotopes Baseball Game</h4>
+								<p class="card-text">Just moved to town from St. Louis, me and one of my close friends
+									are
+									heading to the Isotopes game tonight , would love to make some new friends.</p>
+								<p class="card-text my-1">
+									<small class="text-muted">Price:</small>
+									$15.00
+								</p>
+								<p class="card-text my-1">
+									<small class="text-muted">Attending:</small>
+									3
+								</p>
+								<p class="card-text my-1">
+									<small class="text-muted">Start Time:</small>
+									6:00pm
+								</p>
+								<p class="card-text my-1">
+									<small class="text-muted">End Time:</small>
+									10:00pm
+								</p>
+							</div>
+							<a href="#">
+								<div class="card-footer">
+									<small class="text-muted align-content-center"><i class="fa fa-users" aria-hidden="true"></i>
+										Attend Event
+									</small>
+								</div>
+							</a>
+						</div>
+					</div>
+					<div class="col-md-2"></div>
+				</div>
 			</div>
 		</main>
 	</body>
