updated scr profile class

--- a/webpack/index.html
+++ b/webpack/index.html
@@ -18,7 +18,7 @@
 			})();
 		</script>
 
-		<title>Angular 5 Example App</title>
+		<title>CrowdVibe</title>
 	</head>
 	<body>
 		<crowdvibe-app>Loading&hellip;</crowdvibe-app>
